--- a/config.txt.example
+++ b/config.txt.example
@@ -1,5 +1,5 @@
 SSID=CU_Campus
-username=02505007467
-password=007467
+username=***********
+password=******
 auth_server_ip=58.240.51.118
-DEBUG=True
+DEBUG=False
